# PLANT_DB

./: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  plant_db.cpp  plant_db.h  plant_db_editor.cpp  plant_db_editor.h  plant_db_editor_widgets.cpp  plant_db_editor_widgets.h  plant_properties.cpp  plant_properties.h  plantdb.conf  settings.cpp  settings.h
.plantdb/: PLANTDB.db
